# aia-language-engine

./: README.md  daemon.py  pyproject.toml  requirement.txt
aia-language-engine/: aia_languague_svc.py  aia_sounds.py  aia_tts.py  daemon.py
kafka/: Queue.py
repositories/: aiaRepo.py
test/: decisionForest.py  example02.py  manualTree.py  sklearnTest01.py  tensorFlow.py  textblob.py  tf01.py  varios.py
