[tool.poetry]
name = "aia-language-engine"
version = "0.1.1"
description = ""
authors = ["Edgar Rodrigo Sanchez De Gracia"]
readme = "README.md"
packages = [{include = "aia-language-engine"}]

[tool.poetry.dependencies]
python = ">=3.11.4,<3.12"
colorama = "^0.4.5"
confluent-kafka = "2.3.0"
scikit-learn = "1.3.0"
pandas = "1.5.0"
PyAudio = "0.2.13"
pymongo = "4.5.0"
TTS = "0.19.0"
nltk = "3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
daemon = 'aia-language-engine.daemon:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
